--- a/config/config.example.env
+++ b/config/config.example.env
@@ -5,15 +5,10 @@
 TELEGRAM_BOT_TOKEN=your_bot_token_from_botfather
 TELEGRAM_CHAT_ID=your_chat_id
 
-# Jitsi room (optional; default: DogPhone-<hostname>)
-# JITSI_ROOM=DogPhone-MyDog
-
-# Fixed video call URL (optional; easier than Jitsi)
-# If set, DogPhone uses this link for every call. One-time sign up to Zoom or Whereby, then paste your permanent room link here.
-# Zoom: sign up at zoom.us → Profile → Personal Meeting ID → copy "Join URL" (e.g. https://zoom.us/j/123456789)
+# Video call URL (required) – Zoom Personal Meeting link or any permanent meeting URL
+# Zoom: sign up at zoom.us → Profile → Personal Meeting Room → copy "Join URL"
 #       In Zoom settings enable "Join before host" so the Pi can join without you.
-# Whereby: sign up at whereby.com → create a room → copy room URL (e.g. https://yourname.whereby.com/dogphone)
-# VIDEO_CALL_URL=https://zoom.us/j/123456789
+VIDEO_CALL_URL=https://zoom.us/j/123456789
 
 # GPIO (BCM numbering; change if your wiring differs)
 # BUTTON_GPIO=17
