--- a/config/config.example.env
+++ b/config/config.example.env
@@ -5,10 +5,11 @@
 TELEGRAM_BOT_TOKEN=your_bot_token_from_botfather
 TELEGRAM_CHAT_ID=your_chat_id
 
-# Video call URL (required) – Zoom Personal Meeting link or any permanent meeting URL
-# Zoom: sign up at zoom.us → Profile → Personal Meeting Room → copy "Join URL"
-#       In Zoom settings enable "Join before host" so the Pi can join without you.
+# Video call (required) – Zoom Meeting ID, full Join URL, or any meeting URL
+# Zoom: sign up at zoom.us → Personal Meeting Room → use Meeting ID or "Join URL"
+#       Enable "Join before host". If your room has a password, set it below.
 VIDEO_CALL_URL=https://zoom.us/j/123456789
+# VIDEO_CALL_PASSWORD=your_meeting_password
 
 # GPIO (BCM numbering; change if your wiring differs)
 # BUTTON_GPIO=17
